--- a/src/Components/Employee-Section/Profile/EmployeeProfile.css
+++ b/src/Components/Employee-Section/Profile/EmployeeProfile.css
@@ -64,21 +64,21 @@
   color: #6A7181;           /* modified color: #777c82; */
   font-family: 'Montserrat', 'Segoe UI', Arial, sans-serif;
   font-size: 14px;          /* modified font-size:  15px;  */
-  font-weight: 500;
+  font-weight: 500;   /*modified */
   transition: color 0.22s;
   position: relative;
   outline: none;
   width: 110%;
   display: flex;
   align-items: center;
-  justify-content:space-around;     /* modified justify-content:center; */
+  justify-content:space-around !important;     /* modified justify-content:center; */
   text-decoration: none; /* Remove default underline */
 }
 
 /* Active tab with text underline only */
 .profile-tabs .nav-link.active {
   color: #12baf5 !important;
-  font-weight: 600;
+  font-weight: 500;     /*modified */
   background: transparent !important;
   box-shadow: none !important;
   border: none !important;
@@ -86,7 +86,8 @@
   text-decoration: underline !important;
   text-decoration-color: #12baf5 !important;
   text-decoration-thickness: 1.5px !important;     /*modified text-decoration-thickness:3px !important; */
-  text-underline-offset: 3px !important;          /*modified text-underline-offset: 7px !important; */
+  text-underline-offset: 3px !important;         /*  modified text-underline-offset: 7px !important;*/
+  
 }
 
 /* Override Bootstrap's default active state */
@@ -94,6 +95,7 @@
 .profile-tabs .nav-tabs .nav-link.active {
   background-color: transparent !important;
   border: none !important;
+  
 }
 
 .profile-tabs-card {
@@ -193,7 +195,7 @@
   display: flex;
   align-items: center;
   margin-top: -2px;
-  margin-bottom: -12px;
+  margin-bottom: -4px;   /* modified  */
   width: 90%;
 }
 
@@ -221,7 +223,7 @@
   transition: border-color 0.2s;
   /* new */
   width: 90%;
-  margin-bottom: -22px;
+  margin-bottom: 3px; /* margin-bottom: -22px; *//* modified  */
     appearance: auto;
   -webkit-appearance: auto;
   -moz-appearance: auto;
@@ -314,7 +316,7 @@
 
 /* validation for personal info tab*/
 .input-error {
-  border: 1px solid #dc3545 !important;
+  border: 2px solid rgb(228, 228, 228) !important;
   background-color: #fff5f5;
   margin-bottom: 0.2px;
 }
@@ -322,8 +324,22 @@
 .error-text {
   color: #dc3545;
   font-size: 12px;
-  /* margin-bottom: 2px; */
+  /* margin-bottom: 2px; */ 
   padding-top: 4px;
+}
+
+.input-error1 {                  /*new*/
+  border: 2px solid rgb(228, 228, 228)  !important;
+  background-color: #fff5f5;
+  margin-bottom: 2px !important;   /* modified */
+}
+
+.error-text1 {               /*new*/
+  color: #dc3545;
+  font-size: 14px;
+  /* margin-bottom: 2px; */ 
+  padding-top: 2px;
+  margin-top: -5px;
 }
 
 
@@ -362,10 +378,10 @@
   padding: 10px 20px 10px 10px !important;
   color: #223042 !important;
   /* box-shadow: 0 3px 12px 0 rgba(16,82,177,0.085), 0 3px 16px 0 rgba(16,82,177,0.045); */
-  height: 10% !important;
+  /* height: 12% !important; */
   transition: border-color 0.2s;
   width: 90%;
-  margin-bottom: 4px;
+  margin-bottom: 18px ;  /* margin-bottom: 4px; */  /* modified  */
   /* new */
   appearance: auto;
   -webkit-appearance: auto;
@@ -397,6 +413,66 @@
 .calendar-input-wrap input[type="date"]::-webkit-calendar-picker-indicator {
   opacity: 0;                /* new css part */
 }
+
+
+/* Skills for education add update delete */  /* new */
+
+.skill-input-wrap {
+  display: flex;
+  gap: 10px;
+  margin-top: 6px;
+}
+
+.skill-input {
+  flex: 1;
+  height: 42px;
+}
+
+.skill-add-btn {
+  width: 42px;
+  height: 42px;
+  border-radius: 8px;
+  border: 1px solid #cae7f0;
+  background: #ffffff;
+  font-size: 22px;
+  cursor: pointer;
+}
+
+.skill-add-btn:hover {
+  background: #f1faff;
+}
+
+/* Pills */
+.skills-pill-wrap {
+  display: flex;
+  gap: 7px;
+  flex-wrap: wrap;
+  margin-top: 10px;
+}
+
+.skill-pill {
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  background: #F8F8F8;
+  border-radius: 6px;
+  padding: 6px 14px;
+  font-weight: 400;
+  color: #000;
+  border: 1px solid #cae7f0;
+  font-size: 0.95rem;
+}
+
+.skill-remove {
+  cursor: pointer;
+  font-size: 16px;
+  color: #777;
+}
+
+.skill-remove:hover {
+  color: #ff4d4f;
+}
+
 
 /* ====================== PREVIOUS EXPERIENCE TAB SECTION ====================== */
 .profile-tab-section.experience {
@@ -462,13 +538,15 @@
 .pexform-input1{
    resize: vertical;
    height: 65px ;
-   margin-bottom: 5px;     /*new*/ 
+   margin-bottom: 5px;     /*new*/
+    
 }
 
 .pexform-input2 {
    resize: vertical;
    height: 80px !important;
    /* top: 10px; */
+   
   
 }
 /* ====================== BANK DETAILS TAB SECTION ====================== */
@@ -551,7 +629,7 @@ input[type="radio"] {
 }
 
 /* ====================== SKILL PILLS ====================== */
-.skills-pill-wrap {
+/* .skills-pill-wrap {
   display: flex;
   gap: 7px;
   flex-wrap: wrap;
@@ -566,7 +644,7 @@ input[type="radio"] {
   color: #000000;
   border: 1px solid #cae7f0;
   font-size: 0.98rem;
-}
+} */
 
 /* ====================== DOCUMENTS/UPLOAD BOX ====================== */
 .doc-item {
