--- a/src/Components/Admin-Section/Dashboard/Dashboard.css
+++ b/src/Components/Admin-Section/Dashboard/Dashboard.css
@@ -1,63 +1,180 @@
+*{                          /* modified */
+  margin-top: 0px !important;
+}
 /* AdminDashboard.css */
 
 .dashboard-wrapper {
-  display: flex;
-  background-color: #eff5ff;
-  min-height: 100vh;
-}
-
-.main-content {
-  flex-grow: 1;
-  padding: 20px;
-  background: #eff5ff;
-}
-
-.username h1 {
-  font-size: 2rem;
-  font-weight: bold;
-  color: #333;
-}
-
-.summary-card {
-  border-radius: 10px !important;
-  padding: 20px;
-  background: #eff5ff;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-  transition: transform 0.2s;
-}
-
-.summary-card:hover {
-  transform: translateY(-4px);
-}
-
-.summary-top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.summary-icons {
-  font-size: 1.8rem;
-  color: #19bde8;
-}
-
-.btn-punch {
-  margin-top: 10px;
-  padding: 8px 16px ;
-  background: #19bde8;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
+	display: flex;
+	background-color: #eff5ff;
+	min-height: 100vh;
   
 }
 
-.btn-punch:hover {
-  background: #17a2cc;
+.main-content {
+	flex-grow: 1;
+	padding: 7px;
+	background: #eff5ff;
 }
 
-.maleteam{
-  height:330px;
-  margin-left:-50px;
-  margin-right:-20px;
+.username h1 {
+	font-size: 2rem;
+	font-weight: bold;
+	color: #333;
+  
+}
+
+.vector-img{
+  margin-bottom: 150px;
+}
+
+
+
+.meeting-card{       /*modified*/
+  width: 1045px;
+  height: 290px;  
+  margin-left: -15px;
+  /* padding-right: 10px; */
+  padding-bottom: 10px !important;
+}
+.meeting-left h2{          /*new*/
+  font-size: 22px !important;   /*modified*/
+  padding-left: 5px !important;
+  margin-top: 30px !important;
+}
+.meeting-box{          /*new*/
+  font-size: 15px;
+  height: 80px;
+  width: 270px !important;  
+}
+
+.meeting-info h4{      /*new*/
+  font-size: 16px !important;
+}
+
+.meeting-info p{         /*new*/
+  font-size: 13px !important;
+}
+
+.summary-card {
+	border-radius: 10px !important;
+	padding: 20px;
+	background: #eff5ff;
+	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+	transition: transform 0.2s;
+}
+
+.summary-card:hover {
+	transform: translateY(-4px);
+}
+
+.summary-top {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.summary-icons {
+	font-size: 1.2rem;
+	color: #19bde8;
+  margin-top: -5px !important;
+}
+
+.btn-punch {
+	padding: 8px 16px !important;
+  width: 100%;
+	background: #19bde8;
+	color: #fff;
+	border: none;
+	border-radius: 8px;
+	cursor: pointer;
+}
+
+.btn-punch:hover {
+	background: #17a2cc;
+}
+
+.arrow3{
+  margin-bottom: -50px;
+}
+
+.maleteam {                /* modified */
+	height: 300px;
+  width: 380px !important;
+	margin-left: -50px;
+	margin-right: -155px !important;
+  margin-bottom: -43px;
+}
+
+.clock{
+  /* padding-right: 20px !important; */
+  margin-bottom: 80px;    /* modified */
+}
+
+.punch-info-box{
+  height: 45px;
+  width: 350px;
+}
+.info-item{
+  font-size: 13px ;
+  width: 340px;
+  text-align: center;
+  margin-top: 5px;
+}
+.meeting-time {
+	background: rgb(161, 161, 161) !important;
+	/* color: white; */
+	border-radius: 50%;
+	width: 30px !important;
+	height: 30px !important;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-weight: bold;
+}
+
+.meeting-time img{      /*new*/
+  width: 30px;
+  height: 30px;
+}
+
+
+/* new css part  */
+
+.break-wrapper {
+  position: relative;
+}
+
+.break-dropdown {
+  position: relative;
+  top: 45px;
+  right: 30 !important;
+  background: #fff;
+  width: 260px;
+  border-radius: 6px;
+  color: #333;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  padding: 10px;
+  z-index: 20;
+}
+
+.break-item {
+  padding: 8px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 4px;
+}
+
+.break-item:hover {
+  background: #f5f5f5;
+}
+
+.active-break {
+  background: #e6f7ff;
+  border-left: 4px solid #1890ff;
+}
+
+.custom-break {
+  color: #1890ff;
+  font-weight: 500;
 }
