worked on admin dashboard login sidebar tobbar emp dashbd and login

--- a/src/Components/Admin-Section/AdminLogin.css
+++ b/src/Components/Admin-Section/AdminLogin.css
@@ -108,7 +108,7 @@ body {
   color: #36baee;
   font-weight: 500;
   font-size: 24px;         /* modified */
-  padding-bottom: 10px;
+  padding-bottom: 10px;    /* modified */
 }
 
 .login-form-wrapper h3 {
@@ -269,8 +269,8 @@ body {
 }
 
 .google-icon {
-  width: 20px;
-  height: 20px;
+  width: 30px !important;
+  height: 20px !important;
 }
 
 .google-hidden {
