--- a/src/Components/Admin-Section/Dashboard/Dashboard.css
+++ b/src/Components/Admin-Section/Dashboard/Dashboard.css
@@ -7,6 +7,7 @@
 	display: flex;
 	background-color: #eff5ff;
 	min-height: 100vh;
+  padding-right: 5px !important;     /* new */
   
 }
 
@@ -20,7 +21,7 @@
 	font-size: 2rem;
 	font-weight: bold;
 	color: #333;
-  
+  margin-left: 10px !important; /*modified*/
 }
 
 .vector-img{
@@ -31,11 +32,12 @@
 
 .meeting-card{       /*modified*/
   width: 1045px;
-  height: 290px;  
-  margin-left: -15px;
-  /* padding-right: 10px; */
+  height: 285px;     /*modified*/
+  margin-left: -11px;    /*modified*/
+  /* margin-right: 3px !important; */
   padding-bottom: 10px !important;
 }
+
 .meeting-left h2{          /*new*/
   font-size: 22px !important;   /*modified*/
   padding-left: 5px !important;
@@ -55,12 +57,18 @@
   font-size: 13px !important;
 }
 
+.notice .summary-card{    /*new*/
+  margin-right: -10px;
+
+}
+
 .summary-card {
 	border-radius: 10px !important;
 	padding: 20px;
 	background: #eff5ff;
 	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
 	transition: transform 0.2s;
+  padding-bottom: 20px !important;  /*new*/
 }
 
 .summary-card:hover {
@@ -71,6 +79,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+  padding-bottom: 15px !important;
 }
 
 .summary-icons {
@@ -94,20 +103,23 @@
 }
 
 .arrow3{
-  margin-bottom: -50px;
+  margin-bottom: -190px;
+  
 }
 
 .maleteam {                /* modified */
 	height: 300px;
   width: 380px !important;
-	margin-left: -50px;
-	margin-right: -155px !important;
+	margin-left: -45px;
+	margin-right: -152px !important;
   margin-bottom: -43px;
 }
 
 .clock{
   /* padding-right: 20px !important; */
-  margin-bottom: 80px;    /* modified */
+  margin-bottom: 100px;    /* modified */
+ margin-right: 20px !important;      /* modified */
+
 }
 
 .punch-info-box{
