--- a/src/Components/Admin-Section/Organization/AdminProfile.css
+++ b/src/Components/Admin-Section/Organization/AdminProfile.css
@@ -1,3 +1,14 @@
+.main-content5 {                /* new */
+	flex-grow: 1;
+	padding: 7px;
+	background: #eff5ff;
+   margin-top: -15px !important;    /* modified */
+}
+                           
+.main-content5 .topbar{
+  width: 95%;
+} 
+
 /* ====================== PROFILE HEADER SECTION ====================== */
 .profile-header-card {
   border-radius: 14px;
@@ -6,26 +17,31 @@
   background: #e8f8fe;
   border: none;
 }
+
 .profile-header-content {
   display: flex;
   align-items: flex-start;
   gap: 35px;
   flex-wrap: wrap;
 }
+
 .profile-img-wrap {
   position: relative;
   top: -30px;
   margin-bottom: -30px;
   margin-right: 30px;
 }
+
 .profile-header-name {
   font-size: 1.25rem;
 }
+
 .profile-id {
   font-size: 0.93rem;
   color: #444;
   margin-left: 2px;
 }
+
 .profile-header-card > .card-body > div {
   min-width: 170px;
 }
@@ -129,9 +145,10 @@
   border-radius: 8px;    /* modified border-radius: 14px; */
   border: 1.3px solid #e5eaf1;
   box-shadow: 0 6px 20px rgba(20,66,110,0.11);
-  margin: 0 0 28px 0;          /* modified margin: 0 0 32px 0; */
+  margin: 0 0 28px 10px !important;          /* modified margin: 0 0 32px 0; */
   /* new */
-  width: 97%;
+  width: 93% !important;       /* modified */
+  /* margin-left: 20px; */
 }
 
 .tab-section-title.personal-info {
@@ -174,7 +191,7 @@
 /* --- Two column grid --- */
 .personal-info-form {
   background: transparent !important;
-  padding: 0 38px 6px 38px !important;
+  /* padding: 0 38px 6px 38px !important; */
   box-shadow: none !important;
   border: none !important;
     /* new */
@@ -191,7 +208,7 @@
   display: flex;
   align-items: center;
   margin-top: -2px;        /* modified margin-top: 2px; */
-  margin-bottom: -12px;    /* modified margin-bottom: 2px; */
+  margin-bottom: 12px !important;    /* modified margin-bottom: 2px; */
   /* new */
   width: 90%;
 }
@@ -219,8 +236,9 @@
   transition: border-color 0.2s;
   /* new */
   width: 90%;
-  /* margin-bottom: -22px; */
+  margin-bottom: 7px !important;       /* modified */
 }
+
 .form-input:focus, .form-control:focus, .form-select:focus {
   border-color: #12baf5 !important;
   box-shadow: 0 0 0 3px #19bde91f !important;
@@ -313,7 +331,7 @@
   color: #dc3545;
   font-size: 12px;
   /* margin-bottom: 2px; */
-  padding-top: 4px;
+  padding-top: 2px !important;
 }
 
 .input-error1 {                  /*new*/
