--- a/src/Components/Admin-Section/Organization/ProfileBanner.css
+++ b/src/Components/Admin-Section/Organization/ProfileBanner.css
@@ -3,34 +3,34 @@
   font-size: 1.0rem;
   font-weight: 600;
   color: #000000ff;
-  padding: 20px 40px 10px 40px; /* Adjust padding to match surrounding content alignment */
+  padding: 10px 20px !important; /* Adjust padding to match surrounding content alignment */
   text-align: left;
   /* new */
   position: absolute; /* Takes the title out of normal flow */
   top: 0px;           /* Aligns to the top edge of the wrapper */
   left: -20px;          /* Aligns to the left edge of the wrapper */
-  padding: 20px 40px; /* Adds space around the text, matching the image alignment */
+   /* Adds space around the text, matching the image alignment */
   z-index: 1; 
 }
+
 .my-profile-title h1 {     /* new css*/
   font-size: 28px ;
   color: #202020;
   font-family: 'Montserrat', sans-serif;   /* new font family*/
   font-weight: 600;
-   
 }
+
 .profile-banner-wrapper {
   display: flex;
-  justify-content: center;
-  padding: 60px 0 ;
+  justify-content: center ;
+  padding: 60px 0;
   font-family: 'Montserrat', sans-serif;    /* new font family*/
   background: #f5f7fa;
   /* new */
    position: relative; 
-  width: 97%;
-  margin: 0 auto;
-  margin-left: -5px;
-  
+  width: 95% !important;         /* new css*/
+  margin: 20px auto !important;
+  margin-left: 12px !important;    /* new css*/
   
 }
 
@@ -128,6 +128,7 @@
    /* box-shadow: 0px 6px 16px rgba(28, 27, 27, 0.25); */
    height: 120px;
    border-radius: 0px;
+   width: 100% ;
 }
 
 /* ===== Grid Layout ===== */
@@ -172,11 +173,13 @@
 .profile-role {
   color: #202020;        /* color: #222; */
   font-size: 0.9rem;        /* new */
+  text-align: left;         /* new */
 }
 
 .profile-location {
   color: #202020;
   font-size: 0.9rem;        /* new */
+  text-align: left;         /* new */
 }
 
 /* ===== Center Section ===== */
@@ -186,7 +189,7 @@
 }
 
 .profile-center {
-  margin-top: 20px;
+  margin-top: 20px !important;
 }
 
 /* ===== Right Section ===== */
