--- a/src/Components/Admin-Section/leave/MyLeave.css
+++ b/src/Components/Admin-Section/leave/MyLeave.css
@@ -22,7 +22,7 @@
 /* ===== Main Container ===== */
 .myleave-container {
   flex: 1;
-  padding: 20px;
+  padding: 10px !important ;   /* modified */
   background: #eff5ff;
   min-height: 100vh;
   overflow-y: auto;
@@ -30,7 +30,7 @@
 
 /* ===== Topbar ===== */
 .myleave-container .topbar {
-  width: 98%;
+  width: 97%;    /* modified */
   margin-bottom: 20px;
 }
 
@@ -45,9 +45,8 @@
 /* ===== Leave Summary Cards ===== */
 .leave-summary {
   display: flex;
-
-  gap: 15px;
-  margin-bottom: 20px;
+  gap: 10px !important;  /* modified */
+  margin-bottom: 10px;   /* modified */
 
 }
 
@@ -55,10 +54,14 @@
   background: #fff;
   flex: 1;
   min-width: 200px;
-  padding: 20px;
-  border-radius: 8px;
+  border-radius: 3px !important; /* modified */
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.08);
-  text-align: center;
+  text-align: left;   /* modified */
+  margin-left: -25px; /* modified */
+  margin-right: 20px;   /* modified */
+  padding-top: 13px !important;   /* modified */
+  padding-bottom: 5px !important;  /* modified */
+  
 }
 
 .summary-icon {
