--- a/src/Components/Admin-Section/settings-/admin-settings.css
+++ b/src/Components/Admin-Section/settings-/admin-settings.css
@@ -158,14 +158,15 @@
 
 /* Button styling (for department tab) */
 .btn-create-new {             /*new modified*/
-  background: #00bcd4;
+  background: #19bde8;
   color: white;
   border: none;
   padding: 1px 20px;
   border-radius: 20px;
   cursor: pointer;
-  height: 36px;
-  margin-bottom: -22px;
+  height: 40px;
+  margin-bottom: -30px;
+  margin-right:50px;
 
 }
 
@@ -206,7 +207,7 @@
   
 }
 
-.form-group {
+.form-groupz {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
@@ -215,15 +216,15 @@
 
 }
 
-.form-group label {
+.form-groupz label {
   font-weight: 500;
   /* font-size: 10px !important; */
-  margin-bottom: 8px;
+  margin-bottom: 0px !important;
   color: #374151;
 }
 
-.form-group input,
-.form-group select {
+.form-groupz input,
+.form-groupz select {
    padding: 9px 12px 10px 10px;    /*padding: 10px 12px;*/
   /* border: 1px solid #d1d5db; */
   border-radius:4px !important ;/*modified*/
@@ -241,8 +242,8 @@
 }
 
 
-.form-group input:focus,
-.form-group select:focus {
+.form-groupz input:focus,
+.form-groupz select:focus {
   border-color: #19bde8;
   box-shadow: 0 0 0 2px rgba(25, 189, 232, 0.2);
 }
@@ -258,7 +259,7 @@
 
 .form-group1 input{     /*new*/
   padding: 9px 12px 10px 10px;
-  width: 315px ;
+  width: 340px ;
   height: 40px;
   border-color: #d6cfcf;
   border-style:solid;
@@ -281,7 +282,7 @@
 
 .form-group2 select{     /*new*/
   padding: 9px 12px 10px 10px;
-  width: 315px ;
+  width: 340px ;
   height: 40px;
   border-color: #d6cfcf;
   border-style:solid;
@@ -328,7 +329,7 @@
   border: 1px solid #cbd5e1;
   border-radius: 6px;
   background-color:#f7f8f8;
-  width: 315px; /* adjust if needed */
+  width: 340px; /* adjust if needed */
 }
 
 /* Toggle Switch */
@@ -467,6 +468,7 @@ input:checked + .slider:before {
     border-radius: 10px ;
 }
 
+
 .team-table th, .team-table td,
 .department-table th, .department-table td {
   padding: 12px;
@@ -476,8 +478,7 @@ input:checked + .slider:before {
 }
 .team-table th {              /*modified  */
     background: #e7e4e4ff;
-    border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+    
     
 }
 
@@ -543,8 +544,7 @@ input:checked + .slider:before {
 
  .department-table th {
   background: #e7e4e4ff;
-  border-top-left-radius: 6px;   /*new  */
-  border-top-right-radius: 6px;  /*new  */
+  
   font-weight: 600;              /*new  */
  } 
 
@@ -631,12 +631,13 @@ input:checked + .slider:before {
 }
 
 .btn-create-new1 {         /*new  */
-  background: #00bcd4;
+  background: #19bde8;
   color: white;
   border: none;
-  padding: 1px 20px;
+  padding: 5px 20px;
   border-radius: 20px;
   cursor: pointer;
   margin-bottom: 20px;
-  height: 36px;
+  height: 40px;
+  
 }
