updated admin settings create new buttons

--- a/src/Components/Admin-Section/settings-/admin-settings.css
+++ b/src/Components/Admin-Section/settings-/admin-settings.css
@@ -304,9 +304,10 @@
 }
 
 .form-group3 select{     /*new*/
-  padding: 9px 12px 10px 10px;
-  width: 362px ;
+  padding: 9px 12px 10px 12px;
+  width: 400px ;
   height: 44px;
+  margin-left: -10px !important;
   border-color: #d6cfcf;
   border-style:solid;
   border-radius:7px !important ;/*modified*/
@@ -315,12 +316,34 @@
   background: #f9fafb ;
 }
 
+
 .form-group3 select:focus{    /*new*/
   border-color: #19bde8;
   box-shadow: 0 0 0 2px rgba(25, 189, 232, 0.2);
 }
 
-.theme-input-box {
+
+.form-group4{                 /*new*/
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-group4 select{     /*new*/
+  padding: 9px 12px 10px 12px;
+  width: 430px ;    /*modified*/
+  height: 44px;
+  margin-left: 20px !important;
+  border-color: #d6cfcf;
+  border-style:solid;
+  border-radius:7px !important ;/*modified*/
+  font-size: 15px;
+  outline:none;
+  background: #f9fafb ;
+}
+
+
+.theme-input-box0 {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -339,6 +362,8 @@
   width: 46px;
   height: 24px;
   margin-right: 10px;
+  margin-bottom: 5px;    /* modified */
+  margin-top: -10px ;
 }
 
 .switch input {
@@ -379,7 +404,56 @@ input:checked + .slider:before {
   transform: translateX(22px);
 }
 
+/* defaultThemeforUsers */
+.dtucname{                 /*new*/
+  margin-bottom: -25px; 
+}
+
 /* Basic info image & upload */
+
+
+
+.form-group0 .form-groupp {       /* new */
+   padding: 9px 12px 10px 10px ;    /*padding: 10px 12px;*/
+  border: 1px solid #d1d5db;
+  margin-left:-10px;
+  margin-bottom: 10px;
+  border-radius:8px !important ;/*modified*/
+  font-size: 14px;
+  outline: none;
+  background: #f3f1f1 ;     /*modified*/
+   /* new */
+  height: 45px;
+  width: 400px !important;    /*modified*/
+  appearance: auto;
+  -webkit-appearance: auto;
+  -moz-appearance: auto; 
+}
+
+
+.form-groupp input:focus,
+.form-groupp select:focus {
+  border-color: #19bde8;
+  box-shadow: 0 0 0 2px rgba(25, 189, 232, 0.2);
+}
+ 
+.form-group01 .form-groupp1 {       /* new */
+   padding: 9px 12px 10px 10px ;    /*padding: 10px 12px;*/
+  border: 1px solid #d1d5db;
+  margin-left:20px;
+  margin-bottom: 10px;
+  border-radius:8px !important ;/*modified*/
+  font-size: 14px;
+  outline: none;
+  background: #f3f1f1 ;     /*modified*/
+   /* new */
+  height: 45px;
+  width: 430px !important;    /*modified*/
+  appearance: auto;
+  -webkit-appearance: auto;
+  -moz-appearance: auto; 
+}
+
 
 .profile-upload {        /*new*/
   display: flex;
@@ -454,13 +528,13 @@ input:checked + .slider:before {
 /* team tab */
 
  .team-table{      /*modified  */
-  margin: -30px; 
+  margin: -30px;
+  margin-top: -25px !important; 
 }
 
 .team-table table, .department-table table {
   width: 100%;
   border-collapse: collapse;
-  
 }
 
 .team-table table{
@@ -474,12 +548,13 @@ input:checked + .slider:before {
   padding: 12px;
   text-align: left;
   border-bottom: 1px solid #eee;
-  
+
 }
 .team-table th {              /*modified  */
     background: #e7e4e4ff;
-    
-    
+    margin: -10px;
+    border-top-left-radius: 5px;   /*new  */
+    border-top-right-radius: 5px;     /*new  */
 }
 
 .checkbbig{            /*new  */
@@ -544,8 +619,10 @@ input:checked + .slider:before {
 
  .department-table th {
   background: #e7e4e4ff;
-  
   font-weight: 600;              /*new  */
+  border-top-left-radius: 5px;   /*new  */
+  border-top-right-radius: 5px;     /*new  */
+
  } 
 
  .department-table td{    /*new  */
@@ -555,7 +632,7 @@ input:checked + .slider:before {
 
  .department-table{     /*new  */
   margin: -30px;
-  
+  margin-top: -25px !important;
  }
 
 .pen-icon{      /*new  */
@@ -576,13 +653,19 @@ input:checked + .slider:before {
 
 .break-item {
   margin-bottom: 20px;
+  display: flex;          /*new  */
+  flex-direction: column;   /*new  */
 }
 
+.break-item label {    /*new  */
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 6px; /* space between text & input */
+  color: #111827;
+}
+
+
 .time-input-group {      
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  margin-top: 5px;
   width: 500px;
 }
 
@@ -594,12 +677,12 @@ input:checked + .slider:before {
 }
 
 .time-input-wrapper {          /*new  */
-  position: relative;
+  position:relative;
   width: 95%;
 }
 
 .time-input-wrapper input {       /*new  */
-  width: 100%;          
+  width: 100%;
   padding: 10px 40px 10px 12px; /* space for icon */
   border: 1px solid #dadada;
   border-radius: 10px;
@@ -639,5 +722,221 @@ input:checked + .slider:before {
   cursor: pointer;
   margin-bottom: 20px;
   height: 40px;
+}
+
+
+/* create new breaktime */
+
+.break-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.break-modal-box {
+  background: #fff;
+  width: 530px;
+  height: 70%;
+  border-radius: 12px;
+  padding: 35px 0px 0px 40px;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+}
+
+.break-modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.break-modal-header h3 {
+  margin: 0;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.break-close-btn {
+  background: none;
+  border: none;
+  color: black !important;
+  font-size: 14px !important;
+  cursor: pointer;
+  padding: 1px 25px 30px 10px; 
+}
+
+.break-modal-body {
+  margin-top: 15px;
+}
+
+.break-form-group {
+  margin-bottom: 12px;
+}
+
+.break-form-group label {
+  font-size: 15px;
+  color: #000000;
+  margin-bottom: 5px;
+  display: block;
+}
+
+.break-form-group input {
+  width: 60%;
+  height: 36px;
+  border-radius: 8px;
+  border: 1px solid #d1d5db;
+  margin-bottom:5px;
+  padding: 0 10px;
+}
+.break-form-group input:focus {
+  outline: none;
+  border-color: #19bde8;
+  box-shadow: 0 0 0 2px rgba(25, 189, 232, 0.2);
+}
+
+.break-modal-footer {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+  margin-top: 18px !important;
+}
+
+.break-btn-cancel {
+  background: #ffffff;
+  color: #19bde8;
+  border-style:solid;
+  border-color: #00c9cc;
+  padding: 4px 8px;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 80px;
+}
+
+.break-btn-save {
+  background: #19bde8;
+  color: #fff;
+  border: none;
+  padding: 6px 16px;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 80px;
+}
+
+
+/* create new department */
+
+/* Overlay */
+.dept-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+/* Modal box */
+.dept-modal-box {
+  background: #fff;
+  width: 530px;
+  height: 70%;
+  border-radius: 12px;
+  padding: 35px 0px 0px 40px;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+}
+
+/* Header */
+.dept-modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.dept-modal-header h3 {
+  margin: 0;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.dept-close-btn {
+  background: none;
+  border: none;
+  color: black !important;
+  font-size: 14px !important;
+  cursor: pointer;
+  padding: 1px 25px 30px 10px; 
   
+}
+
+/* Body */
+.dept-modal-body {
+  margin-top: 15px;
+  
+}
+
+.dept-form-group {
+  margin-bottom: 12px;
+}
+
+.dept-form-group label {
+  font-size: 15px;
+  color: #000000;
+  margin-bottom: 5px;
+  display: block;
+}
+
+.dept-form-group input,
+.dept-form-group select {
+  width: 60%;
+  height: 36px;
+  border-radius: 8px;
+  border: 1px solid #d1d5db;
+  margin-bottom:10px;
+  padding: 0 10px;
+}
+.dept-form-group input ,
+.dept-form-group select :focus{
+  outline: none;
+  border-color: #19bde8;
+  box-shadow: 0 0 0 2px rgba(25, 189, 232, 0.2);
+}
+
+/* Footer */
+.dept-modal-footer {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+  margin-top: 15px;
+}
+
+.dept-btn-cancel {
+  background: #ffffff;
+  color: #19bde8;
+  border-style:solid;
+  border-color: #00c9cc;
+  padding: 4px 8px;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 80px;
+}
+
+.dept-btn-save {
+  background: #19bde8;
+  color: #fff;
+  border: none;
+  padding: 6px 16px;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 80px;
 }
